classDiagram
    %%
    %% nextflow.trace
    %%
    %% TraceObserver <|-- AnsiLogObserver
    %% TraceObserver <|-- GraphObserver
    %% TraceObserver <|-- ReportObserver
    %% TraceObserver <|-- TimelineObserver
    %% TraceObserver <|-- TraceFileObserver
    %% TraceObserver <|-- WebLogObserver
    %% TraceObserver <|-- WorkflowStatsObserver

    Session --> AnsiLogObserver : init
    Session --> GraphObserver : init
    Session --> ReportObserver : init
    Session --> TimelineObserver : init
    Session --> TraceFileObserver : init
    Session --> WebLogObserver : init
    Session --> WorkflowStatsObserver : init
